Fix the Sonar quality gate on the multipart form field changes
- Replace the InMemoryPart record, whose generated equals and hashCode
  ignored the content of its byte array (java:S6218), with a plain class.
- Read decoded parts through HttpData.content(), which removes an IOException
  branch the in-memory decoder never takes, and use a pattern switch for the
  MultipartBody content types.
- Use LinkedHashMap.newLinkedHashMap and stop a local variable hiding the parts
  field of the embedded test server request.
- Cover the new code: parsing and resolving parts in GoogleMultipartPartsSpec,
  and unavailable parts, an unreadable form field and a URL encoded form in
  ParameterBindingSpec.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>